force-app/main/default/objects/Order__c/fields/Account_DBA__c.field-meta.xml
<CustomField>
    <fullName>Account_DBA__c</fullName>
    <formula>Account__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account DBA</label>
    <type>Text</type>
</CustomField>