force-app/main/default/objects/Order__c/fields/Additional_Brand_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Brand_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Brand Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Additional Brand Contact)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>