force-app/main/default/objects/Order__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Billing City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>