force-app/main/default/objects/Order__c/fields/Billing_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_Province__c</fullName>
    <label>Billing Province</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>