force-app/main/default/objects/Order__c/fields/Default_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Default_Warehouse__c</fullName>
    <formula>State_License__r.Default_Warehouse__r.Warehouse_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Warehouse</label>
    <type>Text</type>
</CustomField>