force-app/main/default/objects/Order__c/fields/Exclude_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Excise_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Excise Tax</label>
    <type>Checkbox</type>
</CustomField>