force-app/main/default/objects/Order__c/fields/isPreapproved__c.field-meta.xml
<CustomField>
    <fullName>isPreapproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPreapproved</label>
    <type>Checkbox</type>
</CustomField>