force-app/main/default/objects/Order__c/fields/IsRescheduled__c.field-meta.xml
<CustomField>
    <fullName>IsRescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRescheduled</label>
    <type>Checkbox</type>
</CustomField>