force-app/main/default/objects/Order__c/fields/Order_Submit_After_48_Hours__c.field-meta.xml
<CustomField>
    <fullName>Order_Submit_After_48_Hours__c</fullName>
    <label>Order Submit After 48 Hours</label>
    <type>DateTime</type>
</CustomField>