force-app/main/default/objects/Order__c/fields/Order_submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_submitted_Date__c</fullName>
    <description>Date order submitted for approval</description>
    <inlineHelpText>Date order submitted for approval</inlineHelpText>
    <label>Order Submitted Date</label>
    <type>DateTime</type>
</CustomField>