force-app/main/default/objects/Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Type of order created from community</description>
    <inlineHelpText>Order from Community</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Order_Type</valueSetName>
    </valueSet>
</CustomField>