force-app/main/default/objects/Order__c/fields/Original_Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Requested_Ship_Date__c</fullName>
    <label>Original Requested Ship Date</label>
    <type>Date</type>
</CustomField>