force-app/main/default/objects/Order__c/fields/Pack_Out_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pack_Out_Fee__c</fullName>
    <inlineHelpText>Pack-out fee assessed if an item within orders has MOQ = 1 and requires casing such as samples.</inlineHelpText>
    <label>Pack-Out Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>