force-app/main/default/objects/Order__c/fields/Piggyback_sample__c.field-meta.xml
<CustomField>
    <fullName>Piggyback_sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piggyback Sample</label>
    <type>Checkbox</type>
</CustomField>