force-app/main/default/objects/Order__c/fields/Planned_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Ship_Date__c</fullName>
    <label>Planned Ship Date</label>
    <type>Date</type>
</CustomField>