force-app/main/default/objects/Order__c/fields/Publish_Order_To_Slack_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Publish_Order_To_Slack_Date_Time__c</fullName>
    <formula>CreatedDate + 0.04514</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publish Order To Slack Date Time</label>
    <type>DateTime</type>
</CustomField>