force-app/main/default/objects/Order__c/fields/Request_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Ship_Date__c</fullName>
    <label>Request Ship Date</label>
    <type>Date</type>
</CustomField>