force-app/main/default/objects/Order__c/fields/Requested_Delivery_Earliest_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Earliest_Time__c</fullName>
    <label>Requested Delivery Earliest Time</label>
    <type>Time</type>
</CustomField>