force-app/main/default/objects/Order__c/fields/Requested_Delivery_Latest_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Latest_Time__c</fullName>
    <label>Requested Delivery Latest Time</label>
    <type>Time</type>
</CustomField>