force-app/main/default/objects/Order__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Retailer_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>