force-app/main/default/objects/Order__c/fields/Retailer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>