force-app/main/default/objects/Order__c/fields/Retailer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Contact_Name__c</fullName>
    <formula>Retailer_Contact__r.FirstName &amp; &apos; &apos; &amp;Retailer_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Contact Name</label>
    <type>Text</type>
</CustomField>