force-app/main/default/objects/Order__c/fields/Route_Miles__c.field-meta.xml
<CustomField>
    <fullName>Route_Miles__c</fullName>
    <label>Route Miles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>