force-app/main/default/objects/Order__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Shipping City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Vista</fullName>
            </value>
            <value>
                <fullName>Panorama City</fullName>
            </value>
            <value>
                <fullName>West Hollywood</fullName>
            </value>
            <value>
                <fullName>Desert Hot Springs</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Bernardino</fullName>
            </value>
            <value>
                <fullName>Mendota</fullName>
            </value>
            <value>
                <fullName>Oakland</fullName>
            </value>
            <value>
                <fullName>Bellflower</fullName>
            </value>
            <value>
                <fullName>Salinas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>