force-app/main/default/objects/Order__c/fields/Shipping_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Province__c</fullName>
    <label>Shipping Province</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>