force-app/main/default/objects/Order__c/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <label>Shipping Zip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>