force-app/main/default/objects/Order__c/fields/State_License__c.field-meta.xml
<CustomField>
    <fullName>State_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State License</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>