force-app/main/default/objects/Order__c/fields/Time_Workflow_5__c.field-meta.xml
<CustomField>
    <fullName>Time_Workflow_5__c</fullName>
    <formula>IF(NOT(ISNULL(Order_submitted_Date__c)),(Order_submitted_Date__c- 0.038),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Workflow 5</label>
    <type>DateTime</type>
</CustomField>