force-app/main/default/objects/Order__c/fields/Total_Distribution_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Distribution_Fees__c</fullName>
    <formula>Order_Booking_Fee__c +
Total_Pick_Pack_Fee__c +
Total_QA_Review_Fee__c +
Pack_Out_Fee__c +
Schedule_Dispatch_Fee__c +
Stage_Manifest_Fee__c +
Total_Weight_Fee__c +
Total_Milage_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Distribution Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>