force-app/main/default/objects/Order__c/fields/Total_Excise_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Excise_Tax_Amount__c</fullName>
    <label>Total Excise Tax Amount</label>
    <summarizedField>Order_Line_Item__c.Line_Total_Excise_Tax__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>