force-app/main/default/objects/Order__c/fields/Total_Local_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Local_Tax__c</fullName>
    <label>Total Local Tax</label>
    <summarizedField>Order_Line_Item__c.Subtotal_Local_Cannabis_Tax__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>