force-app/main/default/objects/Order__c/fields/Total_Milage_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Milage_Fee__c</fullName>
    <label>Total Mileage Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>