force-app/main/default/objects/Order__c/fields/Total_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Price__c</fullName>
    <label>Total Product Price</label>
    <summarizedField>Order_Line_Item__c.Line_Total_Cost__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>