force-app/main/default/objects/Order__c/fields/Total_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lbs__c</fullName>
    <label>Total Weight (lbs)</label>
    <summarizedField>Order_Line_Item__c.Total_Weight_lbs__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Line_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>