force-app/main/default/objects/Order__c/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporter</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Orders (Transporter)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>