force-app/main/default/objects/Order__c/recordTypes/Brand.recordType-meta.xml
<RecordType>
    <fullName>Brand</fullName>
    <active>true</active>
    <description>Used when origin of order is from Brand</description>
    <label>Brand</label>
</RecordType>