force-app/main/default/objects/Order__c/listViews/Orders_Prior_Month.listView-meta.xml
<ListView>
    <fullName>Orders_Prior_Month</fullName>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Request_Ship_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Total_Line_Items__c</columns>
    <columns>Total_Product_Price__c</columns>
    <columns>Retailer__c</columns>
    <columns>Retailer_Contact__c</columns>
    <columns>Shipping_City__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Retailer,Order__c.Transfer,Order__c.Brand</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved,Pending,Cancelled by Customer,Cancelled by Filigreen,Shipped</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Orders Prior Month</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>