force-app/main/default/objects/Order__c/listViews/X3_Brand_Approved_Not_Shipped.listView-meta.xml
<ListView>
    <fullName>X3_Brand_Approved_Not_Shipped</fullName>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Request_Ship_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Total_Line_Items__c</columns>
    <columns>Total_Product_Price__c</columns>
    <columns>Retailer__c</columns>
    <columns>Retailer_Contact__c</columns>
    <columns>Shipping_City__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Brand,Order__c.Transfer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>3. Brand - Approved Not Shipped</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>