force-app/main/default/objects/Order__c/listViews/X4_Retail_Not_Submitted.listView-meta.xml
<ListView>
    <fullName>X4_Retail_Not_Submitted</fullName>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Request_Ship_Date__c</columns>
    <columns>Account_DBA__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Total_Line_Items__c</columns>
    <columns>Total_Product_Price__c</columns>
    <columns>Retailer_DBA__c</columns>
    <columns>Retailer_Contact__c</columns>
    <columns>Shipping_City__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Retailer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>4. Retail - Not Submitted</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>